# axum-book-management

./: .env  Cargo.toml  LICENSE  README.md  README_cn.md  init.sql
src/: error.rs  lib.rs
src/database/: book.rs  mod.rs  orm.rs  user.rs
src/handler/: auth.rs  book.rs  idl.rs  mod.rs  user.rs
