[package]
name = "book_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json"], default-features = false }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
dotenv = "0.15"
jsonwebtoken = "7"
lazy_static = "1"
